Fix linux file opening by using Process Builder
Fixes #8831


Co-authored-by: ThiloteE <thilo.ertel@posteo.de>